data/derived/fa15/progs/unify/prog2327.ml.out
Characters 215-236:
  helper (seen', rest')
  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
